fix(scrollbar): hide scrollbar for elements with no-scrollbar class

--- a/strukly-frontend/src/index.css
+++ b/strukly-frontend/src/index.css
@@ -85,6 +85,14 @@
 /* Global reset and base styles */
 * {
   box-sizing: border-box;
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 html,
@@ -92,7 +100,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #root {
